--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,3 +4,14 @@ body {
   margin: 0;
   font-family:  "Roboto", sans-serif;
 }
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
+@supports (scrollbar-color: transparent) {
+  * {
+    scrollbar-color: transparent;
+  }
+}
